--- a/package.json
+++ b/package.json
@@ -1,56 +1,58 @@
 {
-  "name": "cv_karashevskyi_maksym",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "cra-template": "1.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^4.2.4"
-  },
+  "name": "layout_landing-page",
+  "version": "1.0.0",
+  "description": "Landing page",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "init": "mate-scripts init",
+    "start": "mate-scripts start",
+    "style-format": "npx stylelint 'src/**/*.scss' --fix --allow-empty-input",
+    "format": "prettier --ignore-path .prettierignore --write './src/**/*.{html,css,scss}'",
+    "lint": "npm run style-format && npm run format && mate-scripts lint",
+    "test:only": "mate-scripts test",
+    "build": "mate-scripts build",
+    "deploy": "mate-scripts deploy",
+    "update": "mate-scripts update",
+    "postinstall": "npm run update",
+    "test": "npm run lint && npm run test:only"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "keywords": [],
+  "author": "Mate Academy",
+  "license": "GPL-3.0",
+  "devDependencies": {
+    "@linthtml/linthtml": "^0.9.6",
+    "@mate-academy/eslint-config": "latest",
+    "@mate-academy/jest-mochawesome-reporter": "^1.0.0",
+    "@mate-academy/linthtml-config": "latest",
+    "@mate-academy/scripts": "^1.9.12",
+    "@mate-academy/stylelint-config": "latest",
+    "@parcel/transformer-sass": "^2.12.0",
+    "cypress": "^13.13.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-cypress": "^3.3.0",
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
+    "parcel": "^2.12.0",
+    "prettier": "^3.3.2",
+    "stylelint": "^16.7.0",
+    "stylelint-scss": "^6.4.1"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "description": "cv",
-  "main": "index.js",
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Q1W2E3R4T5Y6U7I8a/CV_Karashevskyi_Maksym.git"
-  },
-  "keywords": [
-    "react",
-    "cv",
-    "portfolio",
-    "resume",
-    "web-development"
+  "browserslist": [
+    "last 2 versions"
   ],
-  "author": "Maksym Karashevskyi",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Q1W2E3R4T5Y6U7I8a/CV_Karashevskyi_Maksym/issues"
-  },
-  "homepage": "https://github.com/Q1W2E3R4T5Y6U7I8a/CV_Karashevskyi_Maksym#readme"
+  "mateAcademy": {
+    "projectType": "layout",
+    "linters": {
+      "javascript": false,
+      "bem": false
+    },
+    "tests": {
+      "jest": false,
+      "backstop": false,
+      "cypress": true
+    }
+  }
 }
